revert back to original state

--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-<h1>HOME PAGE</h1>
+<h1>Home Page</h1>   
 <div class="bar">
 <nav>
 	<a href="home.html">HOME</a>&nbsp&nbsp
@@ -54,3 +54,7 @@
 <script src="../javascript/slides.js"></script>
 </body>
 </html>
+
+
+<!--nothing changed in the github repo when I changed the title yet, because even tho I'm working on a cloned repo I didn't make any commits.
+So don't make any commits until I'm sure I'm doing the right thing-->
