--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header>
-<h1>Home Page</h1>   
+<h1>New branch - merging to Master Branch</h1>   
 <div class="bar">
 <nav>
 	<a href="home.html">HOME</a>&nbsp&nbsp
